--- a/dw介绍/index.html
+++ b/dw介绍/index.html
@@ -58,7 +58,7 @@
 							<h1 class="text-upper"><a href="#" style="color:orange;">Adobe Dreamweaver</a></h1>
 							<p class="tm-white">
 							
-							Adobe Dreamweaver，简称“DW”，中文名称 "梦想编织者"，最初为美国MACROMEDIA公司开发 [1]  ，
+							Adobe Dreamweaver，简称“DW”，中文名称 "梦想编织者"，最初为美国MACROMEDIA公司开发，
 							2005年被Adobe公司收购。DW是集网页制作和管理网站于一身的所见即所得网页代码编辑器。利用对 HTML、CSS、JavaScript等内容的支持，设计师和程序员可以在几乎任何地方快速制作和进行网站建设
 							</a></p>
 							<img src="images/index1.png" class="img-responsive" alt="home img">
